@@ -43,7 +43,7 @@ struct	contextStruct
 	unsigned	id;
 };
 
-enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,MAINFILENEW,MAINFILEPREFS,MAINFILEQUIT};
+enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,MAINFILENEW,MAINFILEPREFS,MAINFILEQUIT};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
